Updated eternal watch story language

--- a/work.html
+++ b/work.html
@@ -37,7 +37,7 @@
             <div class="fade-group">
                 <p class="watch-text toggle-text bold-text clickable" id="num-nimis-erravi">NUM NIMIS ERRAVI</p>
                 <p class="watch-description">
-                    The machine’s workings have broken, its dial frozen—fixed upon my arrival in month, week, day, and hour. As I drift across years of measured turning, I long to meet this moment's return. No—this moment shall return, and somehow, I with it.
+                    The machine’s workings have broken, its dial frozen—fixed upon my arrival in month, week, day, and hour. As I drift across years of measured turning, I long to meet this moment's return. No—this moment shall return—and somehow, I with it.
                 </p>
             </div>
             
@@ -52,7 +52,7 @@
             <div class="fade-group">
                 <p class="watch-text toggle-text bold-text clickable" id="quo-vel-quando-vadis">QUO VEL QUANDO VADIS</p>
                 <p class="watch-description">
-                    Thus, I am no master of time, but its prisoner—immutably bound to instants where pasts converge.
+                    Thus, I am no sovereign of time but its prisoner—immutably bound to instants where pasts converge.
                 </p>
             </div>
 
