Adding math background elements

--- a/work.html
+++ b/work.html
@@ -86,6 +86,15 @@
 
         <!-- Travel quote now starts hidden and is toggled by "This time traveller's watch..." -->
         <p id="travel-quote" class="hidden">"All we have to decide is what to do with the time that is given us."<br>- J.R.R. Tolkien, <em>The Lord of the Rings</em></p>
+
+        <p id="math-background-toggle" class="clickable bold-text hidden">
+            Mathematical Background <span id="math-arrow" class="blink-arrow">▼</span>
+        </p>
+        
+        <!-- Mathematical Background Content (Hidden by Default) -->
+        <div id="math-background-content" class="hidden">
+            <p>This section will contain the full academic breakdown of The Eternal Watch.</p>
+        </div>
     </section>
     <main>
     </main>
