Adding math background elements

--- a/work.html
+++ b/work.html
@@ -89,7 +89,7 @@
 
         <!-- Mathematical Background Clickable Element (Now Visible on Load) -->
         <p id="math-background-toggle" class="clickable bold-text">
-            Mathematical Background <span id="math-arrow" class="blink-arrow">▼</span>
+            [Mathematical Background] <span id="math-arrow" class="blink-arrow">▼</span>
         </p>
 
         <!-- Mathematical Background Content (Hidden by Default) -->
