Adding math background elements

--- a/work.html
+++ b/work.html
@@ -92,9 +92,9 @@
             [Mathematical Framework] <span id="math-arrow" class="blink-arrow">▼</span>
         </p>
 
-        <!-- Mathematical Background Content (Hidden by Default) -->
-        <div id="math-background-content" class="hidden">
-            <p>This section will contain the full academic breakdown of The Eternal Watch.</p>
+        <!-- Embedded PDF (Hidden Initially) -->
+        <div id="math-framework-content" class="hidden">
+            <iframe id="math-pdf" src="assets/docs/eternal-math.pdf" width="100%" height="500px"></iframe>
         </div>
 
     </section>
