Adding math background elements

--- a/work.html
+++ b/work.html
@@ -88,7 +88,7 @@
         <p id="travel-quote" class="hidden">"All we have to decide is what to do with the time that is given us."<br>- J.R.R. Tolkien, <em>The Lord of the Rings</em></p>
 
         <!-- Mathematical Background Clickable Element (Now Visible on Load) -->
-        <p id="math-background-toggle" class="clickable bold-text">
+        <p id="math-framework-toggle" class="clickable bold-text">
             [Mathematical Framework] <span id="math-arrow" class="blink-arrow">▼</span>
         </p>
 
