--- a/work.html
+++ b/work.html
@@ -94,7 +94,7 @@
 
         <!-- Embedded PDF (Hidden Initially) -->
         <div id="math-framework-content" class="hidden">
-            <iframe id="math-pdf" src="assets/docs/eternal-math.pdf" width="100%" height="500px"></iframe>
+            <iframe id="math-pdf" src="assets/docs/eternal-math.pdf" width="100%"></iframe>
         </div>
 
     </section>
