--- a/work.html
+++ b/work.html
@@ -94,7 +94,8 @@
 
         <!-- Embedded PDF (Hidden Initially) -->
         <div id="math-framework-content" class="hidden">
-            <iframe id="math-pdf" src="assets/docs/eternal-math.pdf#toolbar=1&navpanes=1&scrollbar=1" width="100%" height="90%"></iframe>
+            <iframe id="math-pdf" src="assets/docs/eternal-math.pdf#zoom=FitH&toolbar=1" width="100%" height="90%"></iframe>
+
 
         </div>
 
