Adding math background elements

--- a/work.html
+++ b/work.html
@@ -87,17 +87,12 @@
         <!-- Travel quote now starts hidden and is toggled by "This time traveller's watch..." -->
         <p id="travel-quote" class="hidden">"All we have to decide is what to do with the time that is given us."<br>- J.R.R. Tolkien, <em>The Lord of the Rings</em></p>
 
-        <!-- Mathematical Background Clickable Element (Now Visible on Load) -->
-        <p id="math-framework-toggle" class="clickable bold-text">
-            [Mathematical Framework] <span id="math-arrow" class="blink-arrow">▼</span>
+        <!-- Direct PDF Link -->
+        <p>
+            <a href="assets/docs/eternal-math.pdf" target="_blank" class="clickable bold-text">
+                [Mathematical Framework] >
+            </a>
         </p>
-
-        <!-- Embedded PDF (Hidden Initially) -->
-        <div id="math-framework-content" class="hidden">
-            <iframe id="math-pdf" src="assets/docs/eternal-math.pdf#zoom=FitH&toolbar=1" width="100%" height="90%"></iframe>
-
-
-        </div>
 
     </section>
     <main>
