Adding math background elements

--- a/work.html
+++ b/work.html
@@ -17,7 +17,7 @@
              alt="Lumon employee desk from television series Severance" 
              class="header-image" loading="eager" fetchpriority="high" tabindex="0">
         <nav>
-            <a href="index.html"><span class="back-arrow">&lt;</span> work</a>
+            <a href="index.html"><span class="back-arrow">&lt;</span> [work]</a>
         </nav>        
     </header>
     
