Adding math background elements

--- a/personal.html
+++ b/personal.html
@@ -14,7 +14,7 @@
              alt="Tom Cruise in the 1983 film Risky Business holding a turkey leg" 
              class="header-image" loading="eager" fetchpriority="high" tabindex="0">
         <nav>
-            <a href="index.html"><span class="back-arrow">&lt;</span> [work]</a>
+            <a href="index.html"><span class="back-arrow">&lt;</span> [personal]</a>
         </nav>        
     </header>
 
