Adding math background elements

--- a/work.html
+++ b/work.html
@@ -90,7 +90,7 @@
         <!-- Direct PDF Link -->
         <p>
             <a href="assets/docs/eternal-math.pdf" target="_blank" class="clickable bold-text">
-                [Mathematical Framework] >
+                [mathematical framework] >
             </a>
         </p>
 
