--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; object-src 'none';">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Arian Nazarian's website home page.">
+    <meta name="author" content="Arian Nazarian">
     <title>Arian Nazarian's Website</title>
     <link rel="stylesheet" href="style.css">
     
