--- a/personal.html
+++ b/personal.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; frame-src 'self' https://www.youtube.com; img-src 'self' https://img.youtube.com;">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; object-src 'none';">
+    <meta name="description" content="Arian Nazarian's website personal page.">
+    <meta name="author" content="Arian Nazarian">
     <title>personal | Arian Nazarian</title>
     <link rel="stylesheet" href="style.css">
 </head>
