--- a/personal.html
+++ b/personal.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; object-src 'none';">
-    <meta name="description" content="Arian Nazarian's website personal page.">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; frame-src 'self' https://www.youtube.com; img-src 'self' https://img.youtube.com;">
+    <meta name="description" content="Arian Nazarian's personal website.">
     <meta name="author" content="Arian Nazarian">
     <title>personal | Arian Nazarian</title>
     <link rel="stylesheet" href="style.css">
+
+    <script src="main-site.js" defer></script>
 </head>
-<script src="main-site.js" defer></script>
+
 <body class="personal-page">
     <header>
         <img id="header-img" src="assets/images/riskybusiness.webp"
@@ -30,7 +32,7 @@
             </p>
             <div class="video-container">
                 <div class="video-thumbnail" data-video-id="sC6eCwCiWEw" role="button" aria-label="Play In a Lil Pickle">
-                    <img src="https://img.youtube.com/vi/sC6eCwCiWEw/hqdefault.jpg" alt="In a Lil Pickle short film thumbnail.">
+                    <img src="https://img.youtube.com/vi/sC6eCwCiWEw/mqdefault.jpg" alt="In a Lil Pickle short film thumbnail.">
                     <div class="play-button">▶</div>
                 </div>
             </div>
@@ -43,7 +45,7 @@
             </p>
             <div class="video-container">
                 <div class="video-thumbnail" data-video-id="0yFkQ1g7qp4" role="button" aria-label="Play Free Pizza">
-                    <img src="https://img.youtube.com/vi/0yFkQ1g7qp4/hqdefault.jpg" alt="Free Pizza short film thumbnail.">
+                    <img src="https://img.youtube.com/vi/0yFkQ1g7qp4/mqdefault.jpg" alt="Free Pizza short film thumbnail.">
                     <div class="play-button">▶</div>
                 </div>
             </div>
