--- a/personal.html
+++ b/personal.html
@@ -49,6 +49,18 @@
                     <div class="play-button">▶</div>
                 </div>
             </div>
+
+            <!-- Video 3 -->
+            <p class="video-title clickable" data-index="2">
+                <em>Star Wars Commercials</em>, 2020 
+                <span class="toggle-arrow">▼</span>
+            </p>
+            <div class="video-container">
+                <div class="video-thumbnail" data-video-id="RgWkagrL7CA" role="button" aria-label="Play Star Wars Commercials">
+                    <img src="https://img.youtube.com/vi/RgWkagrL7CA/mqdefault.jpg" alt="Star Wars Commercials short film thumbnail.">
+                    <div class="play-button">▶</div>
+                </div>
+            </div>
         </div>
     
     </main>    
