--- a/personal.html
+++ b/personal.html
@@ -23,6 +23,10 @@
     </header>
 
     <main>
+        <h2 id="short-films-title" class="clickable bold-text">
+            Short Films <span id="short-films-arrow" class="blink-arrow">▼</span>
+        </h2>
+        
         <div class="video-wrapper">
             <!-- Video 1 -->
             <p class="video-title clickable" data-index="0">
