--- a/personal.html
+++ b/personal.html
@@ -23,10 +23,17 @@
     </header>
 
     <main>
+        <!-- Short Films Section -->
+<section id="short-films">
+    <h2 id="short-films-title" class="clickable bold-text">
+        Short Films <span id="short-films-arrow" class="blink-arrow">▼</span>
+    </h2>
+
+    <!-- Video Section (Initially Hidden) -->
+    <div id="short-films-content" class="hidden">
         <div class="video-wrapper">
             <!-- Video 1 -->
             <p class="video-title clickable" data-index="0">
-
                 <em>In a Lil Pickle</em>, 2018 
                 <span class="toggle-arrow">▼</span>
             </p>
@@ -36,10 +43,9 @@
                     <div class="play-button">▶</div>
                 </div>
             </div>
-    
+
             <!-- Video 2 -->
             <p class="video-title clickable" data-index="1">
-
                 <em>Free Pizza</em>, 2018 
                 <span class="toggle-arrow">▼</span>
             </p>
@@ -62,6 +68,9 @@
                 </div>
             </div>
         </div>
+    </div>
+</section>
+
     
     </main>    
     <footer>
