Added Ants on a Line simulation to homepage

--- a/index.html
+++ b/index.html
@@ -83,10 +83,12 @@
                 <label for="popup-reset" class="close-button">close</label>
             </div>
             
-             <!-- Ants on a Line Simulation -->
+            <!-- Ants on a Line Simulation -->
             <section id="ants-on-line">
-                <p id="ant-counter"><span id="remaining-ants">0</span></p>
-                <p id="elapsed-time"><span id="timer">0.00</span> seconds elapsed</p>
+                <div>
+                    <p id="ant-counter"><span id="remaining-ants">0</span></p>
+                    <p id="elapsed-time"><span id="timer">0.00</span> seconds elapsed</p>
+                </div>
                 <div id="stick"></div>
             </section>
 
