Added Ants on a Line simulation to homepage

--- a/index.html
+++ b/index.html
@@ -84,10 +84,11 @@
             </div>
             
             <!-- Ants on a Line Simulation -->
+            <!-- Ants on a Line Simulation -->
             <section id="ants-on-line">
-                <div>
-                    <p id="ant-counter"><span id="remaining-ants">0</span></p>
-                    <p id="elapsed-time"><span id="timer">0.00</span> seconds elapsed</p>
+                <div id="ant-info">
+                    <span id="remaining-ants">0</span><br>
+                    <span id="timer">0.00</span> seconds elapsed
                 </div>
                 <div id="stick"></div>
             </section>
