Added Ants on a Line simulation to homepage

--- a/index.html
+++ b/index.html
@@ -84,11 +84,10 @@
             </div>
             
             <!-- Ants on a Line Simulation -->
-            <!-- Ants on a Line Simulation -->
             <section id="ants-on-line">
                 <div id="ant-info">
-                    <span id="remaining-ants">0</span><br>
-                    <span id="timer">0.00</span> seconds elapsed
+                    <span id="remaining-ants"><b>0</b></span><br>
+                    <span id="timer"><b>0.00</b></span> seconds elapsed
                 </div>
                 <div id="stick"></div>
             </section>
