Added Ants on a Line simulation to homepage

--- a/index.html
+++ b/index.html
@@ -85,12 +85,14 @@
             
             <!-- Ants on a Line Simulation -->
             <section id="ants-on-line">
+                <p></p> <!-- Empty paragraph for space -->
                 <div id="ant-info">
-                    <span id="remaining-ants"><b>0</b></span><br>
-                    <span id="timer"><b>0.00</b></span> seconds elapsed
+                    <span id="remaining-ants">0</span><br>
+                    <span id="timer">0.00</span> seconds elapsed
                 </div>
                 <div id="stick"></div>
             </section>
+
 
             <p class="category-quote">"It's the job that's never started as takes longest to finish."<br>- J.R.R. Tolkien, <em>The Lord of the Rings</em></p>
         </main>
