Added Ants on a Line simulation to homepage

--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
             
             <!-- Ants on a Line Simulation -->
             <section id="ants-on-line">
-                <p></p> <!-- Empty paragraph for space -->
                 <div id="ant-info">
-                    <span id="remaining-ants">0</span><br>
-                    <span id="timer">0.00</span> seconds elapsed
+                    <span id="remaining-ants"><b>0</b></span> ants remaining<br>
+                    <span id="timer"><b>0.00</b></span> seconds elapsed
                 </div>
+                <p></p> <!-- This adds space between the counter and the simulation -->
                 <div id="stick"></div>
             </section>
 
