Added Ants on a Line simulation to homepage

--- a/index.html
+++ b/index.html
@@ -83,15 +83,16 @@
                 <label for="popup-reset" class="close-button">close</label>
             </div>
             
-            <!-- Ants on a Line Simulation -->
+           <!-- Ants on a Line Simulation -->
             <section id="ants-on-line">
                 <div id="ant-info">
-                    <span id="remaining-ants"><b>0</b></span> ants remaining<br>
-                    <span id="timer"><b>0.00</b></span> seconds elapsed
+                    <span id="remaining-ants">0</span> ants remaining<br>
+                    <span id="timer">0.00</span> seconds elapsed
                 </div>
                 <p></p> <!-- This adds space between the counter and the simulation -->
                 <div id="stick"></div>
             </section>
+
 
 
             <p class="category-quote">"It's the job that's never started as takes longest to finish."<br>- J.R.R. Tolkien, <em>The Lord of the Rings</em></p>
