--- a/index.html
+++ b/index.html
@@ -86,13 +86,12 @@
            <!-- Ants on a Line Simulation -->
             <section id="ants-on-line">
                 <div id="ant-info">
-                    <span id="remaining-ants">0</span> ants remaining<br>
-                    <span id="timer">0.00</span> seconds elapsed
+                    <p><span id="remaining-ants">0</span> ants remaining</p>
+                    <p><span id="timer">0.00</span> seconds elapsed</p>
                 </div>
-                <p></p> <!-- This adds space between the counter and the simulation -->
+                <p></p> <!-- Adds space between counters and the simulation -->
                 <div id="stick"></div>
             </section>
-
 
 
             <p class="category-quote">"It's the job that's never started as takes longest to finish."<br>- J.R.R. Tolkien, <em>The Lord of the Rings</em></p>
