Added Ants on a Line simulation to homepage

--- a/index.html
+++ b/index.html
@@ -86,10 +86,9 @@
            <!-- Ants on a Line Simulation -->
             <section id="ants-on-line">
                 <div id="ant-info">
-                    <p><span id="remaining-ants">0</span> ants remaining</p>
-                    <p><span id="timer">0.00</span> seconds elapsed</p>
+                    <span id="remaining-ants">0</span> ants remaining<br>
+                    <span id="timer">0.00</span> seconds elapsed
                 </div>
-                <p></p> <!-- Adds space between counters and the simulation -->
                 <div id="stick"></div>
             </section>
 
