minor updates to work page

--- a/work.html
+++ b/work.html
@@ -32,7 +32,7 @@
     <!-- The Eternal Watch Section -->
         <section id="eternal-watch">
             <h2 id="eternal-title" class="clickable" role="button" aria-expanded="false">
-            <span id="eternal-music-icon">♪</span> The Eternal Watch
+            <span id="eternal-music-icon">♬</span> The Eternal Watch
             <span id="eternal-arrow" class="blink-arrow">▼</span>
             </h2>
             <h2 id="current-time" class="clickable" role="button"></h2>
