minor updates to work page

--- a/work.html
+++ b/work.html
@@ -80,10 +80,7 @@
         <div class="popup" id="popup-years-box" role="dialog" aria-label="Snippets of London from the 1880s to present day" aria-hidden="true">
             <p><strong>London, Timeless: 1880s-Present</strong></p>
             
-            <video id="popup-video" loop autoplay muted playsinline>
-                <source src="assets/images/london-time.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+            <div id="popup-video-container"></div>
             
             <p>Time flies, the sun will rise… and the taxman never dies.</p>
 
