--- a/work.html
+++ b/work.html
@@ -73,23 +73,18 @@
             <span id="matching-years-list"></span>
         </p>
 
-        <!-- Hidden radio reset to close pop-up -->
-        <input type="radio" id="popup-reset" name="year-popup-group" class="popup-radio" checked>
-        <input type="radio" id="popup-years" name="year-popup-group" class="popup-radio">
-
+        <!-- NEW JavaScript popup structure -->
         <div class="popup" id="popup-years-box" role="dialog" aria-label="Snippets of London from the 1880s to present day" aria-hidden="true">
-            <p><strong>London, Timeless: 1880s-Present</strong></p>
-            
-            <video id="popup-video" loop autoplay muted playsinline>
-                <source src="assets/images/london-time.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-            
+            <p><strong>London, Timeless: 1880s–Present</strong></p>
+
+            <!-- JS will insert video here -->
+            <div id="popup-video-container"></div>
+
             <p>Time flies, the sun will rise… and the taxman never dies.</p>
 
-            <!-- Close button now updates aria-hidden dynamically -->
-            <label for="popup-reset" class="close-button" id="popup-close">close</label>
+            <button id="popup-close" class="close-button">close</button>
         </div>
+
 
 
 
