made changes to eternal audio

--- a/work.html
+++ b/work.html
@@ -75,7 +75,9 @@
 
         <!-- NEW JavaScript popup structure -->
         <div class="popup" id="popup-years-box" role="dialog" aria-label="Snippets of London from the 1880s to present day" aria-hidden="true">
-            <p><strong>London, Timeless: 1880s–Present</strong></p>
+            <p id="popup-audio-toggle" class="clickable video-title">
+                <span id="popup-audio-icon">♬</span> London, Timeless: 1880s–Present
+            </p>            
 
             <!-- JS will insert video here -->
             <div id="popup-video-container"></div>
