Header animation every 15s for unclicked elements

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             </picture>
         
             <h2 class="email">
-                <label for="popup-ariann" class="clickable bold-text">ARIANN</label> <em>at</em> 
-                <label for="popup-usc" class="clickable bold-text">USC</label> <em>dot</em> 
-                <label for="popup-edu" class="clickable bold-text">EDU</label>
-            </h2>            
+                <label id="label-ariann" for="popup-ariann" class="clickable bold-text">ARIANN</label> <em>at</em> 
+                <label id="label-usc" for="popup-usc" class="clickable bold-text">USC</label> <em>dot</em> 
+                <label id="label-edu" for="popup-edu" class="clickable bold-text">EDU</label>
+            </h2>                        
         
             <!-- Personal Website Description -->
             <p class="personal-text">
