--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         
             <!-- Personal Website Description -->
             <p class="personal-text">
-                Welcome to my <a href="personal.html" id="link-personal" class="clickable">[personal]</a> website where I share my <a href="work.html" id="link-work" class="clickable">[work]</a>.
+                Welcome to my <a href="personal.html" id="link-personal" class="clickable">[personal]</a> site where I share my <a href="work.html" id="link-work" class="clickable">[work]</a>.
             </p>
             
         </header>
