--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
        <!-- Async load JavaScript for performance -->
     <script src="main-site.js" defer></script>
     </head>
-    <body class="index-page">
+    <body>
 
         <div id="top"></div>
         <header>
