--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
         <div id="top"></div>
         <header>
             <picture id="header-image" role="button" aria-label="Toggle header image">
-              <span class="wiggle-wrapper">
-                <img id="header-img" src="assets/images/no-admittance.webp" 
-                  alt="No Admittance Except on Party Business" 
-                  class="header-image" loading="eager" fetchpriority="high">
-              </span>
-            </picture>
+                <span class="wiggle image-highlight">
+                  <img id="header-img" src="assets/images/no-admittance.webp" 
+                    alt="No Admittance Except on Party Business" 
+                    class="header-image" loading="eager" fetchpriority="high">
+                </span>
+              </picture>
+              
           
             <h2 class="email">
               <span class="wiggle-wrapper">
