--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
               Welcome to my 
               <span class="wiggle-wrapper"><a href="personal.html" id="link-personal" class="clickable">[personal]</a></span>
               site where I share my 
-              <span class="wiggle-wrapper"><a href="work.html" id="link-work" class="clickable">[work]</a></span>
-              .              
+              <span class="wiggle-wrapper"><a href="work.html" id="link-work" class="clickable">[work]</a></span>.              
             </p>
           </header>
           
