--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
        <!-- Async load JavaScript for performance -->
     <script src="main-site.js" defer></script>
     </head>
-    <body>
-
+    <body id="index-page">
         <div id="top"></div>
         <header>
             <picture id="header-image" role="button" aria-label="Toggle header image">
