Moved ants riddle to work page

--- a/work.html
+++ b/work.html
@@ -96,6 +96,17 @@
         </p>
 
     </section>
+
+    <section id="ants-on-line">
+        <div id="ant-info">
+            <span id="remaining-ants">0</span> ants remaining<br>
+            <span id="timer">0.00</span> seconds elapsed
+        </div>
+    
+        <div id="stick">
+            <div id="special-ants"></div> <!-- Moved inside the stick -->
+        </div>
+    </section>
     <main>
     </main>
     <footer>
