Updated eternal watch story text

--- a/work.html
+++ b/work.html
@@ -56,7 +56,7 @@
             <div class="fade-group">
                 <p class="watch-text toggle-text bold-text clickable" id="quo-vel-quando-vadis">QUO VEL QUANDO VADIS</p>
                 <p class="watch-description">
-                    I am no sovereign of Time, but its prisoner. To rare instants wherein pasts converge, I am immutably bound.
+                    Slipping, narrowing, locking my fate, echoes of the past converge to still me. I am no sovereign of Time, but its captive.
                 </p>
             </div>
 
