--- a/work.html
+++ b/work.html
@@ -41,15 +41,16 @@
             <div class="fade-group">
                 <p class="watch-text toggle-text bold-text clickable" id="num-nimis-erravi">NUM NIMIS ERRAVI</p>
                 <p class="watch-description">
-                    The machine’s workings have broken, its dial frozen—fixed upon my arrival in month, weekday, date, and hour. As I drift across years of measured turning, I long to meet this moment's return. No, this moment shall return, and somehow, I with it.
+                    The halted watch sits fixed upon my arrival in month, weekday, date, and hour.
+                    An unmoving face, a beacon through my descent, reveals where Time’s ceaseless reflections turn to greet their likeness.
                 </p>
             </div>
             
             <div class="fade-group">
                 <p class="watch-text toggle-text bold-text clickable" id="iterum-nos-convenimus">ITERUM NOS CONVENIMUS</p>
                 <p class="watch-description">
-                    With no small astonishment, I behold the machine’s restraint, for though it bears me backwards, it does so with unyielding precision.
-                    An unmoving face stands as both beacon and shackle, tethering my descent through history to when Time’s ceaseless reflections turn to greet their likeness.
+                    With no small astonishment, I behold the machine’s restraint; for though it bears me backwards, it does so with unyielding precision.
+                    As I drift across years of measured turning, I long to meet this moment's return. No—This moment shall return, and somehow, I with it.
                 </p>
             </div>
 
